feat:1、网络库的封装 2、基础view的封装 3、首页文章列表

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,5 +12,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="colorTextMain">@color/color_black_dark1</item>
+        <item name="colorTextSecond">@color/color_black_dark3</item>
     </style>
 </resources>
