--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,42 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="color_black_a05">#11000000</color>
+    <color name="color_black_a08">#14000000</color>
+    <color name="color_black_a10">#1A000000</color>
+    <color name="color_black_a13">#22000000</color>
+    <color name="color_black_a30">#4D000000</color>
+    <color name="color_black_a40">#66000000</color>
+    <color name="color_black_a47">#77000000</color>
+    <color name="color_black_a50">#aa000000</color>
+    <color name="color_black_a93">#ee000000</color>
+
+    <color name="color_black_dark1">#111111</color>
+    <color name="color_black_dark1_a86">#dd111111</color>
+    <color name="color_black_dark2">#131313</color>
+    <color name="color_black_dark3">#181818</color>
+    <color name="color_black_dark3_a80">#cc181818</color>
+    <color name="color_black_dark4">#222425</color>
+    <color name="color_black_dark4_a93">#EE222425</color>
+    <color name="color_black_dark5">#363839</color>
+    <color name="color_black_dark5_a93">#EE363839</color>
+
+    <color name="color_gray">#eaeaea</color>
+    <color name="color_gray_light">#f5f5f5</color>
+    <color name="color_gray_light_a80">#ccf5f5f5</color>
+    <color name="color_gray_dark1">#333333</color>
+    <color name="color_gray_dark1_a50">#88333333</color>
+    <color name="color_gray_dark2">#666666</color>
+    <color name="color_gray_dark3">#999999</color>
+    <color name="color_gray_dark4">#cccccc</color>
+
+    <color name="color_white">#ffffff</color>
+    <color name="color_white_a05">#11ffffff</color>
+    <color name="color_white_a20">#33ffffff</color>
+    <color name="color_white_a30">#4DFFFFFF</color>
+    <color name="color_white_a33">#54ffffff</color>
+    <color name="color_white_a50">#88ffffff</color>
+    <color name="color_white_a70">#B3FFFFFF</color>
+    <color name="color_white_a80">#ccffffff</color>
 </resources>
