feat:1、封装banner控件 2、引入banner功能

--- a/libView/src/main/res/layout/lib_view_activity_web_view.xml
+++ b/libView/src/main/res/layout/lib_view_activity_web_view.xml
@@ -4,16 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/lib_view_theme_color"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+    <include
+        android:id="@+id/toolbar_layout"
+        layout="@layout/lib_view_tool_bar" />
 
     <ProgressBar
         android:id="@+id/web_view_pb"
@@ -25,7 +18,7 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar_layout" />
 
     <RelativeLayout
         android:id="@+id/webview_layout"
