--- a/libView/src/main/res/layout/lib_view_empty_view_layout.xml
+++ b/libView/src/main/res/layout/lib_view_empty_view_layout.xml
@@ -7,6 +7,7 @@
         android:id="@+id/text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:drawableTopCompat="@drawable/lib_view_ic_baseline_refresh_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
