feat:注册功能和注册页面

--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -9,5 +9,11 @@
             android:id="@+id/my_share"
             android:icon="@drawable/ic_baseline_share_24"
             android:title="@string/my_share" />
+
+        <item
+            android:id="@+id/settings"
+            android:icon="@drawable/ic_baseline_settings_24"
+            android:title="@string/settings" />
+        
     </group>
 </menu>
