--- a/coreBiz/src/main/res/layout/core_biz_activity_register.xml
+++ b/coreBiz/src/main/res/layout/core_biz_activity_register.xml
@@ -2,10 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".login.ui.login.LoginActivity">
+    tools:context=".login.register.RegisterActivity">
 
     <include
         android:id="@+id/toolbar_layout"
@@ -17,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/lib_view_activity_horizontal_margin"
         android:layout_marginTop="30dp"
-        android:text="@string/core_biz_title_login_tip"
+        android:text="@string/core_biz_title_register_tip"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar_layout" />
@@ -44,27 +43,40 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/core_biz_prompt_password"
-        android:imeActionLabel="@string/core_biz_action_sign_in"
-        android:imeOptions="actionDone"
+        android:imeActionLabel="@string/core_biz_prompt_password"
+        android:imeOptions="actionNext"
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="@id/username"
         app:layout_constraintStart_toStartOf="@id/username"
         app:layout_constraintTop_toBottomOf="@id/username" />
 
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/re_password"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/core_biz_prompt_password_again"
+        android:imeActionLabel="@string/core_biz_prompt_password_again"
+        android:imeOptions="actionDone"
+        android:inputType="textPassword"
+        android:selectAllOnFocus="true"
+        app:layout_constraintEnd_toEndOf="@id/password"
+        app:layout_constraintStart_toStartOf="@id/password"
+        app:layout_constraintTop_toBottomOf="@id/password" />
+
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/login"
+        android:id="@+id/register"
         android:layout_width="200dp"
         android:layout_height="40dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/lib_view_ripple_corner_theme_color"
         android:enabled="false"
         android:gravity="center"
-        android:text="@string/core_biz_action_sign_in"
+        android:text="@string/core_biz_action_register"
         android:textAppearance="@style/lib_view_button_appearance"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/password" />
+        app:layout_constraintTop_toBottomOf="@id/re_password" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
